tmp/funnel-output_path-w0nl0ZfA.tmp/gyak09/tests/unit/pods/errors/view/route-test.jshint.js
/home/ubuntu/workspace/gyak09/tmp/jshinter-output_path-2pHIxNIv.tmp/unit/pods/errors/view/route-test.jshint.js